--- a/QMCycleScrollView/QMCycleScrollView/Lib/QMCycleScrollView/QMCollectionViewCell.xib
+++ b/QMCycleScrollView/QMCycleScrollView/Lib/QMCycleScrollView/QMCollectionViewCell.xib
@@ -1,18 +1,42 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="QMCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="QMCollectionViewCell" customModule="QMCycleScrollView" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="95"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="95"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ufr-by-pUJ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="95"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DwZ-kc-HVx">
+                        <rect key="frame" x="0.0" y="74" width="320" height="21"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
+            <constraints>
+                <constraint firstItem="ufr-by-pUJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="4xK-Z1-fBv"/>
+                <constraint firstAttribute="trailing" secondItem="DwZ-kc-HVx" secondAttribute="trailing" id="6xI-To-5fB"/>
+                <constraint firstAttribute="trailing" secondItem="ufr-by-pUJ" secondAttribute="trailing" id="Dng-MZ-cxz"/>
+                <constraint firstAttribute="bottom" secondItem="ufr-by-pUJ" secondAttribute="bottom" id="WDH-Qc-tJb"/>
+                <constraint firstAttribute="bottom" secondItem="DwZ-kc-HVx" secondAttribute="bottom" id="q93-wj-08O"/>
+                <constraint firstItem="DwZ-kc-HVx" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="rqc-sH-L49"/>
+                <constraint firstItem="ufr-by-pUJ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="wcy-WK-Cez"/>
+            </constraints>
+            <size key="customSize" width="320" height="95"/>
+            <point key="canvasLocation" x="420" y="293.5"/>
         </collectionViewCell>
     </objects>
 </document>
